--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<title>Hello</title>
 </head>
 <body>
-<ahttps://validator.w3.org/nu/?doc=https%3A%2F%2Faungkhant94.github.io%2Fak.miu.github.io%2F"
+<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Faungkhant94.github.io%2Fak.miu.github.io%2F"
 >
-<img src="HTML-checker.png" alt="html validator"/>
+<img src="me.png" alt="html validator"/>
 </a>
 This is First Page
 </body>
