--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Faungkhant94.github.io%2Fak.miu.github.io%2F"
 >
-<img src="./me.jpg" alt="html validator"/>
+<img src="./me.jpg" alt="html validator" style="width: 200px; height: 200px;" />
 </a>
 This is First Page
 </body>
