--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Hello</title>
 </head>
 <body>
-	<img src="./mega.jpeg" alt="miu logo"/>
+	<img src="./megan.jpeg" alt="miu logo"/>
 <h1>Asaad Saad</h1>
 <ul>
 <li>Lab0: This Homepage </li>
