--- a/lab2/aboutme.html
+++ b/lab2/aboutme.html
@@ -26,10 +26,10 @@
 		<p class="header">My Mood</p>
 		<table>
 			<tr>
-				<td>Bored:</td>
-				<td><img class="thumbnail" src="cat.jpg" alt="miu logo"/></td>
+				<td>Angry:</td>
+				<td><img class="thumbnail" src="./angry.jpg" alt="miu logo"/></td>
 				<td>Scared:</td>
-				<td><img class="thumbnail" src="dog.jpg" alt="miu logo"/></td>
+				<td><img class="thumbnail" src="./scare.jpg" alt="miu logo"/></td>
 			</tr>
 		</table>
 		<p class="header">Fun facts about my neighbors</p>
