--- a/lab2/aboutme.html
+++ b/lab2/aboutme.html
@@ -21,7 +21,7 @@
 		<ol>
 			<li>The last 30 min of Forest Gump (<a href="https://www.imdb.com/title/tt0109830/">IMDB</a>)</li>
 			<li>Start Trek Episode V with Zasu (<a href="https://www.imdb.com/title/tt0796366/?ref_=fn_al_tt_1">IMDB</a>)</li>
-			<li>Flight club (not really,but I've seen like 3 movies total so this is my 3rd fav by technically) (<a href="">IMDB</a>)</li>
+			<li>Flight club (not really,but I've seen like 3 movies total so this is my 3rd fav by technically) (<a href="https://www.imdb.com/title/tt2706542/?ref_=fn_al_tt_3">IMDB</a>)</li>
 		</ol>
 		<p class="header">My Mood</p>
 		<table>
@@ -37,10 +37,10 @@
 			<li>Sue Smith: Effervescent is a word that describes her.</li>
 			<li>Bill Thompson: Loves playing Yu-Gi-Oh.</li>
 		</ul>
-		<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fdumindamanjula.github.io%2FCS472-lab2%2Faboutme.html">
+		<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Faungkhant94.github.io%2Fak.miu.github.io%2Flab2%2Faboutme.html">
 			<img class="validator" src="html_valid.png" alt="html validator"/>
 		</a>
-		<a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fdumindamanjula.github.io%2FCS472-lab2%2Fstyle.css&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+		<a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Faungkhant94.github.io%2Fak.miu.github.io%2Flab2%2Faboutme.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
 			<img class="validator" src="css_valid.png" alt="css validator"/>
 		</a>
 
