--- a/lab2/aboutme.html
+++ b/lab2/aboutme.html
@@ -34,8 +34,8 @@
 		</table>
 		<p class="header">Fun facts about my neighbors</p>
 		<ul>
-			<li>Sue Smith: Effervescent is a word that describes her.</li>
-			<li>Bill Thompson: Loves playing Yu-Gi-Oh.</li>
+			<li>Sue Smith: She is nice.</li>
+			<li>Bill Thompson: He also nice.</li>
 		</ul>
 		<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Faungkhant94.github.io%2Fak.miu.github.io%2Flab2%2Faboutme.html">
 			<img class="validator" src="html_valid.png" alt="html validator"/>
