--- a/lab2/aboutme.html
+++ b/lab2/aboutme.html
@@ -19,7 +19,18 @@
 		<p class="header">My Favorite Movies</p>
 		<p>(I actually don't want too many movies, so...here goes!)</p>
 		<ol>
-			<li>The last 30 min of Forest Gump (<a href="https://www.imdb.com/title/tt0109830/">IMDB</a>)</li>
+			<li>The last 30 min of Forest Gump (<a href="https://www.imdb.com/title/tt0109830/">IMDB</a>)
+				<dl>
+					<dt>Director</dt>
+					<dd>Robert Zemeckis</dd>
+					<dt>Genre</dt>
+					<dd>Comedy / Drama/ Romance (<a href="#">more</a>)</dd>
+					<dt>Tagline</dt>
+					<dd>The world will never be the same once you have seen it through the eyes of Forest Gump</dd>
+					<dt>Plot Outline</dt>
+					<dd>Forrest Gump, while not intelligent, has accidentally been present at many historic moments, but his true love, Jenny, eludes him.(<a href="#">more</a>)</dd>
+				</dl>
+			</li>
 			<li>Start Trek Episode V with Zasu (<a href="https://www.imdb.com/title/tt0796366/?ref_=fn_al_tt_1">IMDB</a>)</li>
 			<li>Flight club (not really,but I've seen like 3 movies total so this is my 3rd fav by technically) (<a href="https://www.imdb.com/title/tt2706542/?ref_=fn_al_tt_3">IMDB</a>)</li>
 		</ol>
